# postgresql-dba-gym

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SeedScripts.md  client.py  demo.py  deploy.sh  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
app/: db.py  environment.py  server.py
app/tasks/: base.py  index_optimization.py  schema_migration.py
notes/: 002-inference-run.md  004-inference-run.md  008-inference-run.md  009-inference-run.md  010-inference-run.md  011-inference-run.md  012-inference-run.md  013-inference-run.md  014-inference-run.md  015-inference-run.md  016-inference-run.md  017-inference-run.md  018-inference-run.md  019-inference-run.md  020-inference-run.md  021-inference-run.md  023-inference-run.md  024-inference-run.md  025-inference-run.md  026-inference-run.md  027-inference-run.md  028-inference-run.md  029-inference-run.md  030-inference-run.md  031-inference-run.md  fifth-inference-run.md  first-inference-run.md  seventh-inference-run.md  sixth-inference-run.md  third-inference-run.md
scripts/: generate_charts.py  smoke_test.sh  start.sh
server/: Dockerfile  __init__.py  app.py  db.py  postgres_dba_gym_environment.py
server/tasks/: __init__.py  backup_recovery.py  base.py  index_optimization.py  performance_diagnosis.py  schema_migration.py  security_audit.py
sql/: seed_backup_recovery.sql  seed_index_optimization.sql  seed_performance_diagnosis.sql  seed_schema_migration.sql  seed_security_audit.sql
